--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: William Yang
 description: Bachelor of Laws
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/69130006?s=60&v=4
 
 #
 # Flags below are optional
