--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: William Yang
 
 # Short bio or description (displayed in the header)
-description: Bachelor of Laws
+description: 东洋放送合江记者站 记者
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/69130006?s=60&v=4
